# outdoor_ros2

./: .gitignore  BUILD.bazel  Dockerfile  LICENSE  README.md  WORKSPACE  environ.bzl  outdoor.repos  requirements.txt  ros-humble-install.sh
.github/workflows/: main.yml
bazel_ros2_rules/ros2/resources/ros2bzl/scraping/: ament_cmake.py
data/: BUILD.bazel
data/rover/urdf/: yahboomcar_X3.urdf
dwsl/variot/: BUILD.bazel  README.md  image_pub_py.py  img_pub.cpp  img_pub_py.py  rospy_websocket_client_py.py  websocket_server_py.py
dwsl/variot/data_handlers/: handlers.py
example/chatter/: BUILD.bazel
example/image_tools/: BUILD.bazel  test.cpp
example/sample_cpp/: BUILD.bazel  test.cpp  test_py.py
example/sample_py/: BUILD.bazel  test_py.py
image_tools/: BUILD.bazel  test.cpp
planning/: ackermann_controller.py
planning/predictive_sampling/: BUILD.bazel  ackermann.md  ackermann.py
planning/predictive_sampling/data/: drake_obstacles.dmd.yaml  limo_ackermann.urdf  package.xml  yahboomcar_X3.urdf
planning/predictive_sampling/data/meshes/: limo_wheel.mtl
planning/predictive_sampling/data/urdf/: limo_ackermann.urdf
planning/teleop/: BUILD.bazel  README.md  punito.py
planning/teleop/data/: drake_obstacles.dmd.yaml  mecanum_base.urdf  obstacle_boxes.sdf  obstacles_bumps.sdf  package.xml
tools/workspace/: default.bzl
tools/workspace/bazel_deps/: repository.bzl
