
load("@ros2//:ros_cc.bzl", "ros_cc_binary")
load("@ros2//:ros_cc.bzl", "ros_cc_test")
load("@ros2//:ros_py.bzl", "ros_py_binary", "ros_py_test")
load("@ros2//:rosidl.bzl", "rosidl_interfaces_group")

cc_library(
    name = "test",
    srcs = ["test.cpp"],
    deps = [
        "//:opencv",
        "@ros2//:rclcpp_cc",
        "@drake//systems/framework",
        "@drake_ros_core",
        ##"@drake_ros_viz", 
        "@ros2//:geometry_msgs_cc",
        "@ros2//:visualization_msgs_cc",

    ],
)
